--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "electron": "^1.7.9",
     "irc": "^0.5.2",
     "node-gyp": "^3.6.2",
-    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "main": "build/main.js",
   "scripts": {
