--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "build": "$(npm bin)/babel src -d build --copy-files",
     "watch": "$(npm bin)/babel --watch src -d build --source-maps inline --copy-files",
     "start": "npm run build && electron .",
-    "flow": "flow --color always --show-all-errors | less -FiXR"
+    "_flow": "flow --color always --show-all-errors",
+    "flow": "npm run _flow | less -FiXR",
+    "test": "npm run _flow && mocha --require babel-register"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -27,11 +29,15 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
     "eslint": "^4.13.1",
     "eslint-plugin-flowtype": "^2.41.0",
     "eslint-plugin-react": "^7.5.1",
     "flow-bin": "^0.63.1",
-    "prettier": "^1.9.1"
+    "mocha": "^4.1.0",
+    "prettier": "^1.9.1",
+    "sinon": "^4.1.5"
   },
   "babel": {
     "presets": [
